--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
+    "sync": "cross-env NODE_ENV=development tsx server/run-sync.ts",
     "test": "vitest",
     "test:run": "vitest run",
     "test:ui": "vitest --ui",
@@ -86,10 +87,11 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "react-webcam": "^7.2.0",
     "recharts": "^2.15.2",
+    "string-comparison": "^1.3.0",
     "stripe": "^18.3.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
